# minimum cmake version supported
cmake_minimum_required (VERSION 3.0)

# folder project
project (dynamic)

# Path to library include files
include_directories(${BASE_INCLUDE})

# messaging
# message(WARNING "*** Nothing to do here ***")

# Compilation order of the src subdirectories
# add_subdirectory(basic)
# add_subdirectory(balances)
# add_subdirectory(usdprice)
